tests/compiler_errors/struct_redef_fn.tlp
fn foo do end
struct foo int end